# echidna

./: .pre-commit-config.yaml  README.md  abx_transformation.py  etl.py  final_result_dates.xlsx  flatten.py  flattened.xlsx  mssa_dem.xlsx  mssa_dot.xlsx  mssa_dot_test.xlsx  mssa_fin.xlsx  output.xlsx  pyproject.toml  transform.py  util.py
misc/: flatten.py  sum_over_duration.xlsx
misc/src/abx_transformation/: main.py
misc/test-data-2/: dst.xlsx
misc/test_data/: data1.xlsx
src/: util.py
src/abx_transformation/: main.py
test-data/: data1.xlsx  data2.xlsx  data3.xlsx
test-data-2/: dst.xlsx  extra.xlsx
test_data/: data2.xlsx  mssa_dot_test.xlsx
